--- a/DogWalkerApp.Infrastructure/DogWalkerApp.Infrastructure.csproj
+++ b/DogWalkerApp.Infrastructure/DogWalkerApp.Infrastructure.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DogWalkerApp.Domain\DogWalkerApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
