--- a/DogWalkerApp.WinForms/DogWalkerApp.WinForms.csproj
+++ b/DogWalkerApp.WinForms/DogWalkerApp.WinForms.csproj
@@ -8,4 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DogWalkerApp.Infrastructure\DogWalkerApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
