Initial creation of the ClientForm.
Creation of several arquitecture related folders:
Application: creation of DTO
WinForms: creation of Forms, Presenters and Views

--- a/DogWalkerApp.Application/DogWalkerApp.Application.csproj
+++ b/DogWalkerApp.Application/DogWalkerApp.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DogWalkerApp.Domain\DogWalkerApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
