--- a/DogWalkerApp.Infrastructure/DogWalkerApp.Infrastructure.csproj
+++ b/DogWalkerApp.Infrastructure/DogWalkerApp.Infrastructure.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DogWalkerApp.Application\DogWalkerApp.Application.csproj" />
     <ProjectReference Include="..\DogWalkerApp.Domain\DogWalkerApp.Domain.csproj" />
   </ItemGroup>
 
